tests/records_unsupported/records_unsupported.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Records are not enabled. [unsupported-syntax]

   1| record R {} // ERROR: unsupported
      ^^^^^^^^^^^



Found 1 error
